--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="d9aa8b">  <td>19/07/08 12:33:39</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;MyFirstTestNGTest.loginpage()[pri:0, instance:scripts.MyFirstTestNGTest@215be6bb]">&gt;&gt;loginpage</td> 
+<tr bgcolor="d9aa8b">  <td>19/07/13 15:04:56</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;PrintGoogleLinkName.beforeMethod()[pri:0, instance:scripts.PrintGoogleLinkName@215be6bb]">&gt;&gt;beforeMethod</td> 
 <td>&nbsp;</td>  <td>main@2094411587</td>   <td></td> </tr>
-<tr bgcolor="d9aa8b">  <td>19/07/08 12:33:48</td>   <td>8865</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MyFirstTestNGTest.loginTest()[pri:0, instance:scripts.MyFirstTestNGTest@215be6bb]">loginTest</td> 
+<tr bgcolor="d9aa8b">  <td>19/07/13 15:05:02</td>   <td>6091</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PrintGoogleLinkName.testgooglelink()[pri:0, instance:scripts.PrintGoogleLinkName@215be6bb]">testgooglelink</td> 
   <td>main@2094411587</td>   <td></td> </tr>
-<tr bgcolor="d9aa8b">  <td>19/07/08 12:33:49</td>   <td>9970</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;MyFirstTestNGTest.afterMethod()[pri:0, instance:scripts.MyFirstTestNGTest@215be6bb]">&lt;&lt;afterMethod</td> 
+<tr bgcolor="d9aa8b">  <td>19/07/13 15:05:11</td>   <td>15234</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;PrintGoogleLinkName.afterMethod()[pri:0, instance:scripts.PrintGoogleLinkName@215be6bb]">&lt;&lt;afterMethod</td> 
 <td>&nbsp;</td>  <td>main@2094411587</td>   <td></td> </tr>
 </table>
