--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="d9aa8b">  <td>19/07/17 23:11:18</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AssingmentMailSent.afterMethod()[pri:0, instance:scripts.AssingmentMailSent@215be6bb]">&lt;&lt;afterMethod</td> 
+<tr bgcolor="d9aa8b">  <td>19/08/02 17:29:16</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AnnaUnivTest.exitBrowser()[pri:0, instance:scripts.AnnaUnivTest@215be6bb]">&lt;&lt;exitBrowser</td> 
 <td>&nbsp;</td>  <td>main@2094411587</td>   <td></td> </tr>
-<tr bgcolor="d9aa8b">  <td>19/07/17 23:10:23</td>   <td>-55722</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AssingmentMailSent.beforeMethod()[pri:0, instance:scripts.AssingmentMailSent@215be6bb]">&gt;&gt;beforeMethod</td> 
+<tr bgcolor="d9aa8b">  <td>19/08/02 17:28:45</td>   <td>-31216</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AnnaUnivTest.launchBrowser()[pri:0, instance:scripts.AnnaUnivTest@215be6bb]">&gt;&gt;launchBrowser</td> 
 <td>&nbsp;</td>  <td>main@2094411587</td>   <td></td> </tr>
-<tr bgcolor="d9aa8b">  <td>19/07/17 23:10:33</td>   <td>-44997</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AssingmentMailSent.test()[pri:0, instance:scripts.AssingmentMailSent@215be6bb]">test</td> 
+<tr bgcolor="d9aa8b">  <td>19/08/02 17:28:56</td>   <td>-20644</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AnnaUnivTest.test()[pri:0, instance:scripts.AnnaUnivTest@215be6bb]">test</td> 
   <td>main@2094411587</td>   <td></td> </tr>
 </table>
